# fig

./: .gitignore  LICENSE  README.md  pyproject.toml
fig/: pytest.ini
fig/pages/google/: __init__.py  home_page.py  search_page.py
fig/tests/features/google/search/: default.feature
fig/tests/steps/google/: conftest.py  default.py
