[tool.poetry]
name = "fig"
version = "0.1.0"
description = ""
authors = ["Auzon <oguzhanozer90@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.2"
pytest-bdd = "^6.1.1"
selenium = "^4.12.0"
pytest-sugar = "^0.9.7"
pytest-html = "^4.0.2"
pytest-profiling = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
